--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -12,7 +12,7 @@
     font-size: 15px;
   }
 
-  .bank-info p {
+  .bank-locations p {
     padding: 25px 30px;
   }
 
@@ -121,7 +121,7 @@
       background-position: center left;
     }
 
-    &-overlay {
+    &-layer {
       display: flex;
       position: absolute;
       top: 0;
@@ -170,7 +170,7 @@
     font-size: $font-size-base;
   }
 
-  .bank-info p {
+  .bank-locations p {
     padding: 30px 50px;
   }
 
@@ -218,7 +218,7 @@
   .hero {
     height: 500px;
 
-    &-overlay h1 {
+    &-layer h1 {
       font-size: 36px;
     }
   }
@@ -227,7 +227,7 @@
     padding: 0 120px;
   }
 
-  .bank-info p {
+  .bank-locations p {
     padding: 30px 60px;
   }
 }
@@ -249,13 +249,13 @@
     margin-bottom: 1cm;
 
     &-image,
-    &-overlay {
+    &-layer {
       position: static;
       clip-path: none;
       -webkit-clip-path: none;
     }
 
-    &-overlay {
+    &-layer {
       background-color: transparent;
 
       h1 {
